[package]
name = "mhw"
version = "0.1.0"
authors = ["SilverLuke"]
edition = "2018"

[dependencies]
# Ui related
gdk = "0.13.2"
gdk-pixbuf = "0.9.0"
glib = "0.10.3"
# "Backend"
rusqlite = "0.24.1"
itertools = "0.9.0"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.1"
