[package]
name = "mhwiss"
version = "0.1.0"
authors = ["SilverLuke"]
edition = "2018"

[dependencies]
# Ui related
gdk = "0.14.2"
gdk-pixbuf = "0.14.0"
glib = "0.14.5"

# Backend
rusqlite = "0.26.0"
itertools = "0.10.1"
strum = { version = "0.21", features = ["derive"] }
# Configuration file
directories = "4.0.1"
ron = "0.6.5"
serde = "1.0.130"
# Test
rand = "0.8.4"

[dependencies.gtk]
version = "0.14.1"
features = ["v3_24"]

[dependencies.gio]
version = "0.14.6"
